--- a/TasksProject/Views/Trainee/AllTrainee.cshtml
+++ b/TasksProject/Views/Trainee/AllTrainee.cshtml
@@ -67,10 +67,10 @@
                             <a asp-action="EditTrainee" asp-controller="Trainee" asp-route-id="@trainee.Id" class="btn btn-sm btn-warning rounded-pill me-1">
                                 <i class="bi bi-pencil-square"></i> Edit
                             </a>
-                            <a asp-action="Details" asp-controller="Trainee" asp-route-id="@trainee.Id" class="btn btn-sm btn-info text-white rounded-pill me-1">
+                            <a asp-action="TraineeDetails" asp-controller="Trainee" asp-route-id="@trainee.Id" class="btn btn-sm btn-info text-white rounded-pill me-1">
                                 <i class="bi bi-eye"></i> Details
                             </a>
-                            <a asp-action="Delete" asp-controller="Trainee" asp-route-id="@trainee.Id"
+                            <a asp-action="DeleteTrainee" asp-controller="Trainee" asp-route-id="@trainee.Id"
                                onclick="return confirm('Are you sure you want to delete this trainee?');"
                                class="btn btn-sm btn-danger rounded-pill">
                                 <i class="bi bi-trash"></i> Delete
