--- a/TasksProject/Views/CrsResult/Add_Edit_CrsResult.cshtml
+++ b/TasksProject/Views/CrsResult/Add_Edit_CrsResult.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CrsResult
 
 @{
-    ViewData["Title"] = "Add/Edit Course Result";
+    ViewData["Title"] = "Add/Edit int Result";
 }
 
 <div class="container mt-4">
