--- a/TasksProject/Views/CrsResult/Trainee_CrsResult.cshtml
+++ b/TasksProject/Views/CrsResult/Trainee_CrsResult.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CrsResult
 
 @{
-    ViewData["Title"] = "Trainee Course Result";
+    ViewData["Title"] = "Trainee int Result";
 }
 
 <div class="container mt-4">
