--- a/TasksProject/Views/Trainee/Add_Edit_Trainee.cshtml
+++ b/TasksProject/Views/Trainee/Add_Edit_Trainee.cshtml
@@ -27,9 +27,14 @@
                 </div>
 
                 <div class="mb-3">
-                    <label asp-for="Address" class="form-label fw-semibold"></label>
-                    <input asp-for="Address" class="form-control" placeholder="Enter address" />
-                    <span asp-validation-for="Address" class="text-danger"></span>
+                    <label asp-for="Country" class="form-label fw-semibold"></label>
+                    <input asp-for="Country" class="form-control" placeholder="Enter address" />
+                    <span asp-validation-for="Country" class="text-danger"></span>
+                </div>
+                <div class="mb-3">
+                    <label asp-for="City" class="form-label fw-semibold"></label>
+                    <input asp-for="City" class="form-control" placeholder="Enter address" />
+                    <span asp-validation-for="City" class="text-danger"></span>
                 </div>
 
                 <div class="mb-3">
