--- a/TasksProject/Views/Trainee/AllTrainee.cshtml
+++ b/TasksProject/Views/Trainee/AllTrainee.cshtml
@@ -61,7 +61,7 @@
                                 @trainee.Grade
                             </span>
                         </td>
-                        <td>@trainee.Address</td>
+                        <td>@trainee.City</td>
                         <td>@trainee.Department?.Name</td>
                         <td class="text-center">
                             <a asp-action="EditTrainee" asp-controller="Trainee" asp-route-id="@trainee.Id" class="btn btn-sm btn-warning rounded-pill me-1">
