--- a/TasksProject/Views/Trainee/TraineeDetails.cshtml
+++ b/TasksProject/Views/Trainee/TraineeDetails.cshtml
@@ -10,7 +10,7 @@
     <div class="card p-3 mb-4 shadow-sm">
         <h4 class="mb-3">Trainee Information</h4>
         <p><strong>Name:</strong> @Model.Name</p>
-        <p><strong>Address:</strong> @Model.Address</p>
+        <p><strong>Address:</strong> @Model.City</p>
     </div>
 
     <div class="card p-3 shadow-sm">
